# bruker_to_ismrmrd

src/: main.cpp
src/libbruker/: CMakeLists.txt  brukerparameterparser.cpp  brukerparameterparser.hpp
